--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -8,7 +8,7 @@ permalink: /portfolio/
 
 <section class="container portfolio">
   <div class="cards">
-  {% for work in sorted_works %}
+  {% for work in site.works %}
     <div class="card">
       <div class="card__image">
         <img src="{{ work.logo_image_path }}" alt="{{ work.title }}">
